# Another-Card-Game-ACG

./: ACGFunctions.cpp  ACGFunctions.h  ACGIO.cpp  ACGMain.cpp  ACGMain.h  AccountSystem.h  AccountSystemController.cpp  AccountSystemPackage.h  CMakeLists.txt  Deck.h  LadderSystem.cpp  Printer.cpp  Printer.h  README.md  Reader.cpp  Room.cpp  Room.h  Router.h  Sender.cpp  cards.cpp  cards.h  desk.cpp  desk.h  main.cpp  test_main.cpp
client/: index.html  package-lock.json  package.json
client/css/: app.css  app.css.map  theme.css  theme.css.map
client/css/login-page/: style.css  style.css.map
client/js/: app.js  init-react.js  init-server-side.js  init.js  input-row.js
client/js/login-page/: login-form.js  login-page.js
client/public/: index.html  manifest.json
client/scss/: theme.scss
client/scss/login-page/: style.scss
client/src/: AcgAppController.js  App.js  App.scss  CardPoolPage.js  CardPoolPage.scss  ChatPage.js  ChatPage.scss  DeskPage.js  DeskPage.scss  Dialog.js  Dialog.scss  GoBackButton.js  GoBackButton.scss  InputRow.js  LobbyPage.js  LobbyPage.scss  LoginPage.js  LoginPage.scss  ModifyCardsPage.js  ModifyCardsPage.scss  PlayerInfoPage.js  PlayerInfoPage.scss  RoomPage.js  RoomPage.scss  RoomWaitingPage.js  RoomWaitingPage.scss  ServerSide.js  Util.js  index.js  index.scss  theme.scss  variable.scss
data/: accountlist.json  cardlist.json
game-server/: connection-manager.js  game-server.js  package.json  server-config.json
lib/: CMakeLists.txt
src/: ACGIO.h  ACGMain.cpp  ACGMain.h  ACGType.h  Account.cpp  Account.h  AccountSystem.cpp  AccountSystem.h  AccountSystemCommand.h  AccountSystemController.cpp  AccountSystemController.h  AccountSystemPackage.cpp  AccountSystemParser.cpp  AccountSystemParser.h  Arena.cpp  Arena.h  ArenaController.cpp  ArenaController.h  CMakeLists.txt  CardFactory.cpp  CardFactory.h  CardInfoSystem.cpp  CardInfoSystem.h  Deck.cpp  Deck.h  DeskController.cpp  DeskController.h  DrawCardSystem.cpp  DrawCardSystem.h  GameBuildingSystem.cpp  GameBuildingSystem.h  LadderSystem.cpp  LadderSystem.h  MoneySystem.cpp  MoneySystem.h  NDesk.cpp  NDesk.h  Printer.cpp  Printer.h  Reader.cpp  (+16 more)
src/page/: DeckPage.cpp  DeckPage.h  DrawPage.cpp  DrawPage.h  LobbyPage.cpp  LobbyPage.h  LoginPage.cpp  LoginPage.h  MenuPage.cpp  MenuPage.h  PageBase.cpp  PageBase.h  PageController.cpp  PageController.h  PayMoneyPage.cpp  PayMoneyPage.h
test/: AccounFixture.cpp  AccountFixture.cpp  AccountSystemFixture.cpp  CMakeLists.txt  CardInfoSystemFixture.cpp  DrawCardSystemFixture.cpp  FunctionalTest.cpp  LadderSystemFixture.cpp  LadderSystemFixture.h  test.cpp  test_main.cpp
test/data/: accountlist.json  cardlist.json
testCase/: login.json
